more Captain's Log support; add another civilian outfit

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -350,6 +350,7 @@
     "Page.title.missionProfileTalentSelection": "Auswahl Missionsprofil-Talent",
     "Page.title.simpleStarship": "Vereinfachte Raumschifferschaffung",
     "Page.title.smallCraftStats": "Shuttle-Werte",
+    "Page.title.soloConstructType": "Werkzeug-Auswahl",
     "Page.title.spaceframeOption": "Schiffsklassen-Optionen",
     "Page.title.spaceframeSelection": "Schiffsklasse",
     "Page.title.species": "Spezies",
