--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -261,6 +261,7 @@
     "Page.title.missionProfileTalentSelection": "Talent du Profil de mission",
     "Page.title.simpleStarship": "Creation de Vaisseau Simplifiée",
     "Page.title.smallCraftStats": "Navette",
+    "Page.title.soloConstructType": "Selection d'Outil",
     "Page.title.spaceframeOption": "Option de Modèle",
     "Page.title.spaceframeSelection": "Modèle de Vaisseau",
     "Page.title.species": "Espèce",
