--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -119,6 +119,7 @@ SoloConstructTypePage.character,Character,,,
 SoloConstructTypePage.instruction,"Are you creating a character, or a starship?",,,
 SoloConstructTypePage.starship,Starship,,,
 SoloEraSelectionPage.instruction,Select an era for your character or have one chosen randomly.,,,
+SoloSpeciesPage.instruction,Select a species for your character or have one chosen randomly.,,,
 SpaceframeOptionPage.text,"Do you want a standard spaceframe, or a custom spaceframe?",Möchten Sie eine Standard-Schiffsklasse oder eine eigene Schiffsklasse?,,Voulez vous un modèle standart ou un modèle personalisé?
 SpaceframeOptionPage.button.standardSpaceframe,Standard Spaceframe,Standard-Schiffsklasse,,Modèle Standart
 SpaceframeOptionPage.button.customSpaceframe,Custom Spaceframe,Eigene Schiffsklasse,,Modèle personnalisé
@@ -703,7 +704,7 @@ of their emotions, they can re-merge back into one being (de-dooplercating).",,,
 Species.efrosian.name,Efrosian,Efrosianer,,
 Species.ferengi.name,Ferengi,Ferengi,,
 Species.horta.name,Horta,,,
-Species.horta.name,"The Horta is a highly intelligent, silicon-based species capable of tunneling through solid rock.",,,
+Species.horta.description,"The Horta is a highly intelligent, silicon-based species capable of tunneling through solid rock.",,,
 Species.human.name,Human,Menschen,,
 Species.human.aboutNames,"Human names vary wildly, and rather than make sweeping generalizations here, it’s better that Players seek out other sources for names, considering the vast range of languages, cultures, and traditions Humanity encompasses.",,,
 Species.human.description,"Originating on the planet Earth in the Sol system, Humans are a resilient, diverse, and adaptable species, who developed from fractious, warring nations on the brink of mutual annihilation to a united, peaceful society in less than a century, and managed to forge alliances between former enemies within a century of achieving interstellar space flight. Earth is a founder and pivotal member of the United Federation of Planets, and many of the Federation’s institutions can be found on Earth. Humans often exhibit a dichotomy in their nature — being both driven to strong emotion and careful reason — and while they have largely grown beyond their warlike and divisive past, their drive and capacity for aggression are as much a part of their success as their curiosity and analytical minds.",,,
@@ -712,7 +713,8 @@ Species.human.traitDescription,"Humans are adaptable and resilient, and their re
 Species.illyrian.name,Illyrian,,,
 Species.illyrian.description,"A spacefaring humanoid species that utilizes genetic engineering to adapt their bodies to the new planets they settle, rather than changing the planet to suit themselves.",,,
 Species.jelna.name,Rigellian Jelna,,,
-Species.kazon.name,"An aggressive warrior species from the Delta Quadrant divided into eighteen different sects that war over resources. They have intricate head ridges and thick, coral-shaped hair.",,,
+Species.kazon.name,Kazon,,,
+Species.kazon.description,"An aggressive warrior species from the Delta Quadrant divided into eighteen different sects that war over resources. They have intricate head ridges and thick, coral-shaped hair.",,,
 Species.klingon.name,Klingon,Klingonen,,
 Species.klingonQuchHa.name,Klingon (QuchHa’),Klingonen (QuchHa'),,
 Species.orion.name,Orion,Orioner,,
