Environment selection for Captain's Log

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -162,6 +162,12 @@
     "SoloConstructTypePage.instruction": "Are you creating a character, or a starship?",
     "SoloConstructTypePage.starship": "Starship",
 
+    "SoloEnvironmentPage.instruction": "In choosing your character's environment, you'll select either a setting or a condition. Each offers different storytelling prompts, but both provide the same type of benefits to your character.\n\nYou may also randomly determine one of those options.",
+    "SoloEnvironmentPage.settings": "Settings",
+    "SoloEnvironmentPage.conditions": "Conditions",
+
+    "SoloEnvironmentPage.anotherSpeciesWorld.attributeText": "Based on species.",
+
     "SoloEraSelectionPage.instruction": "Select an era for your character or have one chosen randomly.",
 
     "SoloSpeciesPage.instruction": "Select a species for your character or have one chosen randomly.",
