- revisions to environment handling and attribute selections

--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -118,6 +118,7 @@ ReputationChangePage.instruction,Adjust the character's reputation as appropriat
 SoloConstructTypePage.character,Character,,,
 SoloConstructTypePage.instruction,"Are you creating a character, or a starship?",,,
 SoloConstructTypePage.starship,Starship,,,
+SoloEnvironmentDetailsPage.speciesText,Which species' world did the character experience?,,,
 SoloEnvironmentPage.instruction,"In choosing your character's environment, you'll select either a setting or a condition. Each offers different storytelling prompts, but both provide the same type of benefits to your character.
 
 You may also randomly determine one of those options.",,,
